--- a/HackerNews/Base.lproj/Main.storyboard
+++ b/HackerNews/Base.lproj/Main.storyboard
@@ -97,5 +97,50 @@
             </objects>
             <point key="canvasLocation" x="-81" y="153"/>
         </scene>
+        <!--Root View Controller-->
+        <scene sceneID="1h8-pa-fEj">
+            <objects>
+                <tableViewController id="t1J-WP-cUC" customClass="CategoriesViewController" customModule="HackerNews" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="bHY-o4-0v0">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="4RT-HM-uTA">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4RT-HM-uTA" id="7ZI-wG-Bsk">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="t1J-WP-cUC" id="RZt-09-nTX"/>
+                            <outlet property="delegate" destination="t1J-WP-cUC" id="n5z-y7-liU"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="hYg-yZ-rjh"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5Br-oY-rkB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="161" y="1071"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Rs0-0Y-pnO">
+            <objects>
+                <navigationController storyboardIdentifier="categoriesNavigationController" id="9Dc-Cc-ONr" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="YuZ-mr-1S9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="t1J-WP-cUC" kind="relationship" relationship="rootViewController" id="val-AP-vJ5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ztS-Fj-0qN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-659" y="1071"/>
+        </scene>
     </scenes>
 </document>
